--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dark-switch",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "开箱即用的暗黑模式开关组件",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -42,6 +42,7 @@
 		"@vicons/material": "^0.12.0",
 		"@vitejs/plugin-vue": "^2.3.1",
 		"@vueuse/core": "^8.3.1",
+		"bumpp": "^7.1.1",
 		"naive-ui": "^2.28.2",
 		"unocss": "^0.31.14",
 		"vite": "^2.9.5"
