--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
 		"naive-ui": "^2.28.2",
 		"unocss": "^0.31.14",
 		"vite": "^2.9.5",
-		"vite-plugin-dts": "^1.1.1"
-	},
-	"dependencies": {
+		"vite-plugin-dts": "^1.1.1",
 		"vue": "^3.2.33"
+	},
+	"peerDependencies": {
+		"vue": ">=3.0.0"
 	}
 }
