--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -23,6 +23,8 @@ jobs:
     
       - name: Install deps
         run: pnpm install
+        with:
+          version: 7
 
       - name: Build
         run: pnpm run build
