--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 	],
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
 		"prepublishOnly": "npm run build",
+		"build": "vite build && pnpm build-types",
+		"build-types": "vue-tsc -p tsconfig.build.json",
 		"play": "pnpm -C examples/vite-project run dev",
 		"play:build": "pnpm -C examples/vite-project run build",
+		"play:preview": "pnpm -C examples/vite-project run preview",
 		"release": "bumpp --commit --push --tag && npm publish"
 	},
 	"repository": {
@@ -45,10 +47,12 @@
 		"@vueuse/core": "^8.5.0",
 		"bumpp": "^7.1.1",
 		"naive-ui": "^2.29.0",
+		"typescript": "^4.6.4",
 		"unocss": "^0.31.17",
 		"vite": "^2.9.9",
 		"vite-plugin-dts": "^1.1.1",
-		"vue": "^3.2.33"
+		"vue": "^3.2.33",
+		"vue-tsc": "^0.34.15"
 	},
 	"peerDependencies": {
 		"vue": ">=3.0.0"
