--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
     "url": "https://github.com/markthree"
   },
   "devDependencies": {
-    "@types/node": "^18.8.3",
-    "@vicons/material": "^0.12.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vueuse/core": "^9.3.0",
+    "@iconify-json/line-md": "^1.1.20",
+    "@types/node": "^18.11.1",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vueuse/core": "^9.6.0",
     "bumpp": "^8.2.1",
-    "naive-ui": "^2.33.4",
+    "naive-ui": "^2.34.2",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.8.4",
-    "unocss": "^0.45.29",
-    "vite": "^3.1.6",
-    "vue": "^3.2.40",
-    "vue-tsc": "^1.0.1"
+    "typescript": "^4.9.4",
+    "unocss": "^0.45.30",
+    "vite": "^3.2.5",
+    "vue": "^3.2.45",
+    "vue-tsc": "^1.0.11"
   },
   "peerDependencies": {
     "vue": ">=3.0.0"
