--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@iconify-json/line-md": "^1.1.20",
     "@types/node": "^18.11.1",
+    "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vueuse/core": "^9.6.0",
     "bumpp": "^8.2.1",
@@ -51,7 +52,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.4",
     "unocss": "^0.45.30",
-    "vite": "^3.2.5",
+    "vite": "^3.1.6",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.11"
   },
