--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -8,13 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.40"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.2",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.6",
-    "vue-dark-switch": "workspace:*",
-    "vue-tsc": "^1.0.1"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
+    "vue-dark-switch": "workspace:0.1.10",
+    "vue-tsc": "^1.0.11"
   }
 }
