--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.4",
     "unocss": "^0.45.30",
-    "vite": "^3.1.6",
+    "vite": "^4.0.0-beta.5",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.11"
   },
