--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -11,10 +11,10 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
-    "vite": "^3.2.5",
-    "vue-dark-switch": "workspace:0.1.10",
-    "vue-tsc": "^1.0.11"
+    "vite": "^4.0.3",
+    "vue-dark-switch": "workspace:*",
+    "vue-tsc": "^1.0.18"
   }
 }
