--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "require": "./dist/index.umd.js",
       "import": "./dist/index.es.js",
       "types": "./dist/exports.d.ts"
-    }
+    },
+    "./*": "./*"
   },
   "files": [
     "dist"
@@ -43,18 +44,18 @@
   },
   "devDependencies": {
     "@iconify-json/line-md": "^1.1.20",
-    "@types/node": "^18.11.1",
+    "@types/node": "^18.11.18",
     "@vicons/material": "^0.12.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vueuse/core": "^9.6.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vueuse/core": "^9.9.0",
     "bumpp": "^8.2.1",
-    "naive-ui": "^2.34.2",
+    "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.4",
-    "unocss": "^0.45.30",
-    "vite": "^4.0.0-beta.5",
+    "unocss": "^0.48.0",
+    "vite": "^4.0.3",
     "vue": "^3.2.45",
-    "vue-tsc": "^1.0.11"
+    "vue-tsc": "^1.0.18"
   },
   "peerDependencies": {
     "vue": ">=3.0.0"
