style: smooth rotation animation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=7.0.0"
+  },
+  "packageManager": "pnpm@7.0.0",
   "scripts": {
     "dev": "vite",
     "build-js": "vite build",
@@ -43,19 +48,19 @@
     "url": "https://github.com/markthree"
   },
   "devDependencies": {
-    "@iconify-json/line-md": "^1.1.20",
+    "@iconify-json/line-md": "^1.1.22",
     "@types/node": "^18.11.18",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vueuse/core": "^9.9.0",
+    "@vueuse/core": "^9.11.0",
     "bumpp": "^8.2.1",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.9.4",
-    "unocss": "^0.48.0",
-    "vite": "^4.0.3",
+    "unocss": "^0.48.4",
+    "vite": "^4.0.4",
     "vue": "^3.2.45",
-    "vue-tsc": "^1.0.18"
+    "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
     "vue": ">=3.0.0"
