--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "prepublishOnly": "npm run build",
     "build-types": "vue-tsc -p tsconfig.build.json",
     "play": "pnpm -C examples/vite-project run dev",
-    "build": "npm-run-all --parallel build-js build-types",
+    "release": "bumpp --commit --push --tag && npm publish",
     "play:build": "pnpm -C examples/vite-project run build",
-    "play:preview": "pnpm -C examples/vite-project run preview",
-    "release": "bumpp --commit --push --tag && npm publish"
+    "build": "rimraf -rf dist && run-p build-js build-types",
+    "play:preview": "pnpm -C examples/vite-project run preview"
   },
   "repository": {
     "type": "git",
@@ -54,8 +54,10 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
     "bumpp": "^8.2.1",
+    "cpy": "^9.0.1",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^4.1.2",
     "typescript": "^4.9.4",
     "unocss": "^0.48.4",
     "vite": "^4.0.4",
