--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "vue-dark-switch",
   "version": "0.3.0",
   "description": "多合一的开箱即用 vue3 暗黑模式开关组件",
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
+  "main": "./dist/exports.cjs",
+  "module": "./dist/exports.mjs",
   "types": "./dist/exports.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.umd.js",
-      "import": "./dist/index.es.js",
+      "require": "./dist/exports.cjs",
+      "import": "./dist/exports.mjs",
       "types": "./dist/exports.d.ts"
+    },
+    "./vite": {
+      "require": "./dist/vite.cjs",
+      "import": "./dist/vite.mjs",
+      "types": "./dist/vite.d.ts"
     },
     "./*": "./*"
   },
