--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
-    "vue": ">=3.0.0"
+    "vue": ">=3.0.0",
+    "vite": ">=4.0.0"
   }
 }
