--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     },
     "./*": "./*"
   },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -70,7 +77,7 @@
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
-    "vue": ">=3.0.0",
-    "vite": ">=4.0.0"
+    "vite": ">=4.0.0",
+    "vue": ">=3.0.0"
   }
 }
