--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
+    "unocss": "^0.48.4",
     "vite": "^4.0.4",
     "vue-dark-switch": "workspace:*",
     "vue-tsc": "^1.0.24"
