build: add turbo

--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   "scripts": {
     "dev": "vite",
     "build-js": "vite build",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm build:cached",
     "build-types": "vue-tsc -p tsconfig.build.json",
     "play": "pnpm -C examples/vite-project run dev",
+    "build:cached": "turbo build --filter=vue-dark-switch",
     "release": "bumpp --commit --push --tag && npm publish",
     "play:build": "pnpm -C examples/vite-project run build",
     "build": "rimraf -rf dist && run-p build-js build-types",
@@ -62,19 +63,20 @@
   },
   "devDependencies": {
     "@iconify-json/line-md": "^1.1.22",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vueuse/core": "^9.11.0",
+    "@vueuse/core": "^9.12.0",
     "bumpp": "^8.2.1",
     "cpy": "^9.0.1",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^4.1.2",
-    "typescript": "^4.9.4",
-    "unocss": "^0.48.4",
-    "vite": "^4.0.4",
-    "vue": "^3.2.45",
+    "turbo": "^1.7.4",
+    "typescript": "^4.9.5",
+    "unocss": "^0.49.4",
+    "vite": "^4.1.1",
+    "vue": "^3.2.47",
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
