--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "extends": [
+    "//"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
