chore: add vite-layers

--- a/package.json
+++ b/package.json
@@ -64,20 +64,21 @@
   },
   "devDependencies": {
     "@iconify-json/line-md": "^1.1.23",
-    "@types/node": "^18.14.6",
+    "@types/node": "^18.15.10",
     "@vicons/material": "^0.12.0",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vueuse/core": "^9.13.0",
     "bumpp": "^9.0.0",
     "cpy": "^9.0.1",
-    "fast-cpy": "^0.0.4",
+    "fast-cpy": "^0.0.8",
     "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^4.3.1",
-    "turbo": "^1.8.3",
-    "typescript": "^4.9.5",
-    "unocss": "^0.50.4",
-    "vite": "^4.1.4",
+    "rimraf": "^4.4.1",
+    "turbo": "^1.8.6",
+    "typescript": "^5.0.2",
+    "unocss": "^0.50.6",
+    "vite": "^4.2.1",
+    "vite-layers": "^0.2.0",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
   },
