--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -4,18 +4,10 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.2.47"
-  },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.5",
-    "unocss": "^0.48.5",
-    "vite": "^4.1.1",
-    "vue-dark-switch": "workspace:*",
-    "vue-tsc": "^1.0.24"
+    "vue-dark-switch": "workspace:*"
   }
 }
