--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
     "turbo": "^1.8.6",
     "typescript": "^5.0.2",
     "unocss": "^0.50.6",
-    "vite": "^4.2.1",
+    "vite": "^4.3.0-beta.1",
     "vite-layers": "^0.3.1",
+    "vite-plugin-warmup": "^0.0.2",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
   },
