--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "email": "1801982702@qq.com",
     "url": "https://github.com/markthree"
   },
+  "sideEffects": [
+    "**/*.css"
+  ],
   "devDependencies": {
     "@iconify-json/line-md": "^1.1.24",
     "@types/node": "^18.16.14",
@@ -78,6 +81,7 @@
     "unocss": "^0.52.3",
     "vite": "^4.3.8",
     "vite-layers": "^0.3.5",
+    "vite-plugin-lib-inject-css": "^1.2.0",
     "vite-plugin-warmup": "^0.1.0",
     "vue": "^3.3.4",
     "vue-tsc": "^1.6.5"
