--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
   "scripts": {
     "dev": "vite",
     "build-js": "vite build",
-    "prepublishOnly": "pnpm build:cached",
+    "prepublishOnly": "pnpm build",
     "build-types": "vue-tsc -p tsconfig.build.json",
     "copy-polyfill": "fast-cpy src/polyfill dist/polyfill",
-    "build:cached": "turbo build --filter=vue-dark-switch",
     "release": "bumpp --commit --push --tag && npm publish",
     "build": "rimraf -rf dist && run-p copy-polyfill build-js build-types",
     "example:vue:dev": "pnpm -C examples/vue run dev",
@@ -81,7 +80,6 @@
     "naive-ui": "^2.34.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
-    "turbo": "^1.10.6",
     "typescript": "^5.1.6",
     "unocss": "^0.53.4",
     "vite": "^4.3.9",
